[bot, api] обработка и получение данных vcc-list

--- a/bot/static/vcc-list.html
+++ b/bot/static/vcc-list.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
  <h1>VCC LIST</h1>
+ <button onclick="sendRequest()">Тык</button>
+
+ <script>
+   async function sendRequest() {
+     try {
+       // Отправляем POST-запрос
+       let response = await fetch('/api/vcc/list/', {
+         method: 'POST',
+         headers: {
+           'accept': 'application/json',
+           'init-data': window.Telegram.WebApp.initData,
+           'Content-Type': 'application/json'
+         },
+         body: JSON.stringify({
+           "date_from": "2024-01-01",
+           "date_to": "2024-12-31",
+         })
+       });
+
+       // Проверяем статус ответа
+       if (!response.ok) {
+         throw new Error('Network response was not ok');
+       }
+
+       // Получаем JSON-ответ
+       let data = await response.json();
+       console.log('Ответ от сервера:', data);
+
+     } catch (error) {
+       console.error('Ошибка при отправке запроса:', error);
+     }
+   }
+ </script>
 </body>
 </html>
