--- a/bot/static/vcc-list.html
+++ b/bot/static/vcc-list.html
@@ -1,59 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Фильтрация ВКС</title>
 
-    <link rel="stylesheet" href="/static/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <link href="/static/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@1.4.6/dist/flowbite.min.css" rel="stylesheet" />
+
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@1.4.6/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="/static/script.js"></script>
 </head>
-<body>
 
-<form>
-    <div class="mb-6">
-        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Логин</label>
-        <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="john.doe@company.com" required />
+<body class="h-screen bg-gray-100 flex items-center justify-center">
+
+    <!-- Форма поиска -->
+    <div class="w-full max-w-md p-8 bg-white shadow-lg rounded-lg">
+        <h2 class="text-2xl font-semibold text-center mb-6">Поиск встреч</h2>
+        <form id="search-form" action="#" method="POST">
+            <div class="mb-4">
+                <label for="date_from" class="block text-sm font-medium text-gray-700">Дата начала</label>
+                <input type="text" id="date_from" name="date_from" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" required placeholder="Выберите дату" />
+            </div>
+
+            <div class="mb-6">
+                <label for="date_to" class="block text-sm font-medium text-gray-700">Дата окончания</label>
+                <input type="text" id="date_to" name="date_to" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" required placeholder="Выберите дату" />
+            </div>
+
+            <button type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">Поиск</button>
+        </form>
     </div>
-    <div class="mb-6">
-        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Пароль</label>
-        <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="•••••••••" required />
+
+    <!-- Toast уведомление (всплывающее сообщение) -->
+    <div id="toast-danger" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 hidden absolute top-1/4 left-1/2 transform -translate-x-1/2 z-50 opacity-0 transition-opacity duration-500" role="alert">
+        <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"/>
+            </svg>
+            <span class="sr-only">Error icon</span>
+        </div>
+        <div class="ms-3 text-sm font-normal" id="toast-message">Произошла ошибка!</div>
     </div>
-    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
-</form>
 
+<script>
+    flatpickr("#date_from", {
+        dateFormat: "Y-m-d",
+    });
 
- <script>
-   async function sendRequest() {
-     try {
-       // Отправляем POST-запрос
-       let response = await fetch('/api/vcc/list/', {
-         method: 'POST',
-         headers: {
-           'accept': 'application/json',
-           'init-data': window.Telegram.WebApp.initData,
-           'Content-Type': 'application/json'
-         },
-         body: JSON.stringify({
-           "date_from": "2024-01-01",
-           "date_to": "2024-12-31",
-         })
-       });
+    flatpickr("#date_to", {
+        dateFormat: "Y-m-d",
+    });
 
-       // Проверяем статус ответа
-       if (!response.ok) {
-         throw new Error('Network response was not ok');
-       }
+    // Обработка отправки формы поиска
+    document.getElementById('search-form').addEventListener('submit', async function(e) {
+        e.preventDefault(); // Предотвратить стандартную отправку формы
 
-       // Получаем JSON-ответ
-       let data = await response.json();
-       console.log('Ответ от сервера:', data);
+        const dateFrom = document.getElementById('date_from').value;
+        const dateTo = document.getElementById('date_to').value;
 
-     } catch (error) {
-       console.error('Ошибка при отправке запроса:', error);
-     }
-   }
- </script>
+        try {
+            const response = await fetch('/api/vcc/list/', {
+                method: 'POST',
+                headers: {
+                        'accept': 'application/json',
+                        'Content-Type': 'application/json',
+                        'init-data': window.Telegram.WebApp.initData
+                    },
+                body: JSON.stringify({
+                    date_from: dateFrom,
+                    date_to: dateTo,
+                }),
+            });
+
+            if (response.ok) {
+                Telegram.WebApp.close();
+            } else {
+                showToast('Произошла ошибка, попробуйте позже.');
+            }
+        } catch (error) {
+            showToast('Произошла ошибка, попробуйте позже.');
+        }
+    });
+</script>
+
 </body>
+
 </html>
