[frontend] add func to add users to form vcc-crate.html

--- a/bot/static/login.html
+++ b/bot/static/login.html
@@ -16,9 +16,10 @@
 <body class="h-screen bg-gray-100 flex items-center justify-center">
 
     <!-- Форма авторизации -->
-    <div class="w-full max-w-md p-8 bg-white shadow-lg rounded-lg">
-        <h2 class="text-2xl font-semibold text-center mb-6">Вход в систему</h2>
-        <form id="login-form" action="#" method="POST">
+    <div class="w-full max-w-md bg-white shadow-lg rounded-lg">
+        <h2 class="text-2xl font-semibold text-center mb-6 text-white rounded-t-lg bg-[#118ab2] py-6 px-4">Планирование ВКС <br>
+            Ханты-Мансийского автономного округа-Югры</h2>
+        <form id="login-form" action="#" method="POST" class="p-8">
             <div class="mb-4">
                 <label for="login" class="block text-sm font-medium text-gray-700">Логин</label>
                 <input type="text" id="login" name="login" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
@@ -29,7 +30,7 @@
                 <input type="password" id="password" name="password" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" required />
             </div>
 
-            <button type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">Войти</button>
+            <button type="submit" class="w-full bg-[#118ab2] text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">Войти</button>
         </form>
     </div>
 
