--- a/bot/static/vcc-create.html
+++ b/bot/static/vcc-create.html
@@ -6,6 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Создание видеоконференции</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer>
+        document.addEventListener('DOMContentLoaded', () => {
+            const participantsInput = document.getElementById('participants');
+            const addButton = document.getElementById('add-participant');
+            const participantsList = document.getElementById('participants-list');
+
+            addButton.addEventListener('click', () => {
+                const email = participantsInput.value.trim();
+
+                if (email) {
+                    const emailBlock = document.createElement('div');
+                    emailBlock.className = 'email-block bg-indigo-100 text-indigo-800 px-4 py-2 rounded-md mb-2 cursor-pointer';
+                    emailBlock.textContent = email;
+
+                    // Удаление email по клику
+                    emailBlock.addEventListener('click', () => {
+                        participantsList.removeChild(emailBlock);
+                    });
+
+                    participantsList.appendChild(emailBlock);
+                    participantsInput.value = '';
+                }
+            });
+        });
+    </script>
+    <style>
+        .email-block:hover {
+            background-color: #e0e7ff; /* Цвет фона при наведении */
+        }
+    </style>
 </head>
 
 <body class="bg-gray-100 flex flex-col justify-center items-center min-h-screen">
@@ -49,8 +79,7 @@
                 <input type="datetime-local" id="start-time" name="start-time" required
                     class="mt-2 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
             </div>
-
-            <!-- Продолжительность -->
+<!-- Продолжительность -->
             <div class="mb-4">
                 <label for="duration" class="block text-sm font-medium text-gray-700">Продолжительность (в минутах)</label>
                 <input type="number" id="duration" name="duration" required min="1"
@@ -67,14 +96,20 @@
             <!-- Участники -->
             <div class="mb-4">
                 <label for="participants" class="block text-sm font-medium text-gray-700">Участники</label>
-                <input type="email" id="participants" name="participants" placeholder="Введите email участников"
-                    required class="mt-2 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                <div class="flex gap-2 mt-2">
+                    <input type="email" id="participants" name="participants" placeholder="Введите email участников"
+                        required class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                    <button type="button" id="add-participant"
+                        class="px-4 py-2 bg-indigo-600 text-white rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">
+                        Добавить
+                    </button>
+                </div>
+                <div id="participants-list" class="mt-4"></div>
             </div>
 
             <!-- Максимальное количество участников -->
             <div class="mb-4">
-                <label for="max-participants" class="block text-sm font-medium text-gray-700">Максимальное количество
-                    участников</label>
+                <label for="max-participants" class="block text-sm font-medium text-gray-700">Максимальное количество участников</label>
                 <input type="number" id="max-participants" name="max-participants" required min="1"
                     class="mt-2 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
             </div>
@@ -100,7 +135,6 @@
             </div>
         </form>
     </div>
-
 </body>
 
 </html>
