--- a/bot/static/vcc-create.html
+++ b/bot/static/vcc-create.html
@@ -44,15 +44,8 @@
 
         <form action="#" method="POST">
             <!-- Название ВКС -->
-            <div class="mb-4">
-                <label for="conference-name" class="block text-sm font-medium text-gray-700">Название ВКС</label>
-                <input type="text" id="conference-name" name="conference-name" required
-                    class="mt-2 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
-            </div>
-
-            <!-- Место проведения -->
-            <div class="mb-4">
-                <label for="location" class="block text-sm font-medium text-gray-700">Место проведения</label>
+            <div class="mb-4">git config --global user.email "you@example.com"
+                git config --global user.name "Your Name"
                 <select id="location" name="location"
                     class="mt-2 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
                     <option value="">Выберите место</option>
