[frontend] fix vcc-creat.htmle

--- a/bot/static/vcc-create.html
+++ b/bot/static/vcc-create.html
@@ -44,8 +44,7 @@
 
         <form action="#" method="POST">
             <!-- Название ВКС -->
-            <div class="mb-4">git config --global user.email "you@example.com"
-                git config --global user.name "Your Name"
+            <div class="mb-4">
                 <select id="location" name="location"
                     class="mt-2 w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
                     <option value="">Выберите место</option>
