--- a/bot/static/vcc-list.html
+++ b/bot/static/vcc-list.html
@@ -16,6 +16,24 @@
 </head>
 
 <body class="h-screen bg-gray-100 flex items-center justify-center">
+    <!-- Форма поиска -->
+    <div class="w-full max-w-md p-8 bg-white shadow-lg rounded-lg">
+        <h2 class="text-2xl font-semibold text-center mb-6">Выберите даты для фильтрации</h2>
+        <form id="search-form">
+            <div class="mb-4">
+                <label for="date_from" class="block text-sm font-medium text-gray-700">Дата начала</label>
+                <input type="date" id="date_from" name="date_from" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" required placeholder="Выберите дату" value="2024-12-01" />
+            </div>
+
+            <div class="mb-6">
+                <label for="date_to" class="block text-sm font-medium text-gray-700">Дата окончания</label>
+                <input type="date" id="date_to" name="date_to" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" required placeholder="Выберите дату" value="2024-12-01" />
+            </div>
+
+            <button type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500">Поиск</button>
+        </form>
+    </div>
+
     <!-- Toast уведомление (всплывающее сообщение) -->
     <div id="toast-danger" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 hidden absolute top-1/4 left-1/2 transform -translate-x-1/2 z-50 opacity-0 transition-opacity duration-500" role="alert">
         <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
@@ -27,38 +45,37 @@
         <div class="ms-3 text-sm font-normal" id="toast-message">Произошла ошибка!</div>
     </div>
 
-    <button onclick="c()">Click</button>
+    <script>
+        document.getElementById('search-form').addEventListener('submit', async function(e) {
+            e.preventDefault(); // Предотвращаем стандартную отправку формы
 
-<script>
-    // Обработка отправки формы поиска
-    const c = async function(){
-        try {
-            const response = await fetch('/api/vcc/meetings/', {
-                method: 'POST',
-                headers: {
-                        'accept': 'application/json',
-                        'Content-Type': 'application/json',
-                        'init-data': window.Telegram.WebApp.initData
-                    },
-                body: JSON.stringify({
-                    from_datetime: '2024-01-01',
-                    to_datetime: '2024-12-31',
-                    priority: 1,
-                }),
-            });
+            const dateFrom = document.getElementById('date_from').value;
+            const dateTo = document.getElementById('date_to').value;
 
-            if (response.ok) {
-                Telegram.WebApp.close();
-            } else {
+            try {
+                const response = await fetch('/api/vcc/meetings/', {
+                    method: 'POST',
+                    headers: {
+                            'accept': 'application/json',
+                            'Content-Type': 'application/json',
+                            'init-data': window.Telegram.WebApp.initData
+                        },
+                    body: JSON.stringify({
+                        from_datetime: dateFrom,
+                        to_datetime: dateTo,
+                    }),
+                });
+
+                if (response.ok) {
+                    Telegram.WebApp.close(); // Закрытие веб-приложения Telegram после успешного запроса
+                } else {
+                    showToast('Произошла ошибка, попробуйте позже.');
+                }
+            } catch (error) {
                 showToast('Произошла ошибка, попробуйте позже.');
             }
-        } catch (error) {
-            showToast('Произошла ошибка, попробуйте позже.');
-        }
-    }
-
-</script>
-
+        });
+    </script>
 </body>
 
 </html>
