--- a/bot/static/login.html
+++ b/bot/static/login.html
@@ -17,8 +17,7 @@
 
     <!-- Форма авторизации -->
     <div class="w-full max-w-md bg-white shadow-lg rounded-lg">
-        <h2 class="text-2xl font-semibold text-center mb-6 text-white rounded-t-lg bg-[#118ab2] py-6 px-4">Планирование ВКС <br>
-            Ханты-Мансийского автономного округа-Югры</h2>
+        <h2 class="text-2xl font-semibold text-center mb-6 text-white rounded-t-lg bg-[#118ab2] py-6 px-4">Планирование ВКС</h2>
         <form id="login-form" action="#" method="POST" class="p-8">
             <div class="mb-4">
                 <label for="login" class="block text-sm font-medium text-gray-700">Логин</label>
